# finite-automats

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  func_g  func_y  lin_example.txt  rs_example.txt
src/: automat.h  conf_parser.h  lin_atmt.cpp  lin_atmt.h  main.cpp  mmap_file.cpp  mmap_file.h  rs_atmt.cpp  rs_atmt.h
